# attendance-management

./: README.md  alembic.ini  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 0aeb51955821_initial_migration.py
sql_app/: crud.py  database.py  main.py  models.py  schemas.py
